# outlook-extractor

./: .gitignore  .pre-commit-config.yaml  BUILD_INSTRUCTIONS.2md  BUILD_INSTRUCTIONS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MIGRATION_NOTES.md  README.md  UPDATES_TEMPLATE.md  config.example.yaml  launch.py  main_cli.py  migrate_to_fsg.py  outlook-extractionv10.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_mac.py  test_all_tabs.py  test_export_tab.py  test_export_ui.py  update_repo.py  updates.md  verify_exports.py
examples/: README.md  prompt_management_demo.py  prompt_management_example.py
outlook_extractor/: __init__.orig.py  __init__.py  __main__.py  auto_updater.py  config.py  constants.py  create_default_config.py  default_config.ini  logging_config.py  logging_setup.py  logging_utils.py  main.py  run.py  run_ui.py  setup.old.py  setup.py  start_ui.py  test_ui.py
outlook_extractor/config/: config.yaml
outlook_extractor/core/: email_threading.py  mapi_service.py  mock_outlook.py  outlook_client.py
outlook_extractor/export/: __init__.py  constants.py  csv_exporter.py  excel_exporter.py  json_exporter.py  pdf_exporter.py  presets.py  validation.py
outlook_extractor/extractor/: __init__.py  outlook_extractor.py
outlook_extractor/processors/: email_processor.py
outlook_extractor/prompts/: README.md  __init__.py  config.py  instance.py  manager.py  utils.py
outlook_extractor/prompts/examples/: email_processing.py
outlook_extractor/storage/: __init__.py  base.py  json_storage.py  sqlite_storage.py
outlook_extractor/ui/: __init__.py  export_tab.py  logging_ui.py  main_window.py  update_dialog.py
outlook_extractor/utils/: __init__.py  logger.py
tests/: __init__.py  conftest.py  mock_win32com.py  test_cli.py  test_config.py  test_csv_exporter.py  test_email_processor.py  test_email_threading.py  test_excel_exporter.py  test_export_formats.py  test_json_exporter.py  test_mapi_service.py  test_outlook_extractor.py  test_pdf_export.py  test_pdf_exporter.py  test_prompt_management.py  test_prompt_manager.py  test_simple.py
tests/extractor/: test_outlook_extractor.py
