[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "outlook-extractor"
version = "1.0.0"
description = "A cross-platform tool for extracting and managing emails from Microsoft Outlook"
readme = "README.md"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Communications :: Email",
]
requires-python = ">=3.8"
dependencies = [
    "PySimpleGUI>=5.0.0,<6.0.0",
    "python-dateutil>=2.8.2",
    "pywin32>=300; sys_platform == 'win32'",
    "pyobjc-framework-Cocoa>=9.2; sys_platform == 'darwin'",
    "tqdm>=4.65.0",
    "python-magic>=0.4.27",
    "beautifulsoup4>=4.12.2",
    "html2text>=2020.1.16",
    "sqlalchemy>=2.0.0,<3.0.0",
    "pydantic>=2.0.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "flake8>=6.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "sphinx>=6.0.0",
    "sphinx-rtd-theme>=1.2.0",
    "twine>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/outlook-extractor"
Documentation = "https://outlook-extractor.readthedocs.io/"
Changelog = "https://github.com/yourusername/outlook-extractor/blob/main/CHANGELOG.md"
Issues = "https://github.com/yourusername/outlook-extractor/issues"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --cov=outlook_extractor --cov-report=term-missing"

[project.scripts]
outlook-extractor = "outlook_extractor.run:main"
